--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
 	"engines": {
 		"node": ">=16"
 	},
-	"files": [
-		"typescript.json"
-	],
+	"files": ["typescript.json"],
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
